RESOLVED FIXED154047
Don't crash if we fail to parse a builtin
https://bugs.webkit.org/show_bug.cgi?id=154047
Summary Don't crash if we fail to parse a builtin
Filip Pizlo
Reported 2016-02-09 14:22:13 PST
Crashing probably seemed like a good idea at the time, but we could get here in case of a near stack overflow, so that the parser bails because of recursion.
Attachments
the patch (1.48 KB, patch)
2016-02-09 14:24 PST, Filip Pizlo
mark.lam: review+
Filip Pizlo
Comment 1 2016-02-09 14:24:01 PST
Created attachment 270953 [details] the patch
Mark Lam
Comment 2 2016-02-09 14:26:37 PST
Comment on attachment 270953 [details] the patch r=me
Filip Pizlo
Comment 3 2016-02-09 14:42:21 PST
Note You need to log in before you can comment on or make changes to this bug.