Don't crash if we fail to parse a builtin https://bugs.webkit.org/show_bug.cgi?id=154047 rdar://problem/24300617

Reviewed by Mark Lam.

Crashing probably seemed like a good idea at the time, but we could get here in case of a
near stack overflow, so that the parser bails because of recursion.

* parser/Parser.h:
(JSC::parse):



Canonical link: https://commits.webkit.org/172152@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196337 268f45cc-cd09-0410-ab3c-d52691b4dbfc